# RAG-Retrieval-Augmented-Generation-

./: .gitignore  README.md  app.py  pyproject.toml  requirement.txt  requirements.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: embedding.py  search.py  vectorstore.py
