[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.0",
    "faiss-cpu>=1.8.0",
    "ipykernel>=7.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "numpy>=1.26.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
]
